# starcore-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  STARCORE-Platform-Audit-Report.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  pyrightconfig.json
.claude/: launch.json  settings.json
.claude/commands/: health.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  dependabot-auto-merge.yml  docker-publish.yml
apps/: __init__.py
apps/cli/: __init__.py  main.py
docs/: architecture.md  development.md  index.md  installation.md
docs/adr/: ADR-001-blueprint-dependency-execution.md  ADR-002-provider-lifecycle.md  ADR-003-rate-limiting.md  ADR-004-dependency-vulnerability-scanning.md  ADR-005-unified-schema-management.md
docs/changelog/: sprint-001.md  sprint-002.md  sprint-003.md  sprint-004.md  sprint-005.md
docs/ses/: SES-0000-MASTER-INDEX.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
plugins/example_provider/: __init__.py
plugins/run_logger/: __init__.py
tests/: conftest.py  test_ai_generator.py  test_api.py  test_auth.py  test_blueprints.py  test_cli.py  test_diagnostics.py  test_discovery.py  test_events.py  test_graph_execution.py  test_health.py  test_migrations.py  test_persistence.py  test_plugin_manager.py  test_providers.py  test_rate_limiting.py  test_resource_actions.py  test_scheduler.py  test_schema_management.py  test_settings_isolation.py  test_template_resolver.py
