[project]
name = "starcore-platform"
version = "0.1.0-dev"
description = "AI Powered Infrastructure Operating Platform"
readme = "README.md"
requires-python = ">=3.12"

authors = [
    { name = "Jakub Krajča", email = "jakubkrajca@volny.cz" }
]

license = { text = "Apache-2.0" }

dependencies = [
    "fastapi",
    "uvicorn",
    "typer",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "httpx",
    "rich",
    "loguru",
    "pyyaml",
    "psutil",
    "redis",
    "nats-py"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "mkdocs",
    "mkdocs-material"
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
