[project]
name = "starcore-platform"
version = "0.1.0-dev"
description = "AI Powered Infrastructure Operating Platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Jakub Krajča", email = "jakubkrajca@volny.cz" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.35.0",
    "typer>=0.17.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "sqlalchemy>=2.0.42",
    "alembic>=1.16.0",
    "httpx>=0.28.1",
    "rich>=14.0.0",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "psutil>=7.0.0",
    "redis>=6.2.0",
    "nats-py>=2.11.0",
    "docker>=7.2.0",
    "proxmoxer>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.0",
    "mypy>=1.17.0",
    "pyright>=1.1.390",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
]

[project.scripts]
starcore = "apps.cli.main:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "apps",
    "packages/core",
    "packages/blueprints",
    "packages/orchestrator",
    "packages/provider_sdk",
    "packages/providers",
]

[tool.hatch.build.targets.sdist]
include = [
    "apps",
    "packages",
    "tests",
    "docs",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    ".",
    "packages",
]
addopts = "-ra"

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
